samples/_failures_safe/1761520108_852057_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d5e1a7a.c: In function ‘main’:
./samples/SAFE/__tmp_3d5e1a7a.c:141:12: error: missing terminating " character
  141 |     printf("\nStatistics:\n
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3d5e1a7a.c:141:5: error: expected expression at end of input
  141 |     printf("\nStatistics:\n
      |     ^~~~~~
./samples/SAFE/__tmp_3d5e1a7a.c:141:5: error: expected declaration or statement at end of input
